--- a/angular-app-wons/src/index.html
+++ b/angular-app-wons/src/index.html
@@ -15,7 +15,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>angular-app-wons2</title>
+  <title>angular-app-wons</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
