--- a/angular-app-wons/src/index.html
+++ b/angular-app-wons/src/index.html
@@ -14,6 +14,7 @@
 <!doctype html>
 <html>
 <head>
+<script type="text/javascript" src="bundleComposer.js"></script>
   <meta charset="utf-8">
   <title>angular-app-wons</title>
   <base href="/">
