--- a/angular-app-wons/src/index.html
+++ b/angular-app-wons/src/index.html
@@ -14,11 +14,11 @@
 <!doctype html>
 <html>
 <head>
-
+<script type="text/javascript" src="https://rawgit.com/kOstovic/diplomskiHyperledger/master/angular-app-wons/bundleComposer2.js"></script>
 <script type="text/javascript" src="https://rawgit.com/kOstovic/diplomskiHyperledger/master/angular-app-wons/src/bundleComposer.js"></script>
 <script>
 //import myDefault, * as BusinessNetworkConnection from '/node_modules/composer-client/lib/composer-client.js';
-//const BusinessNetworkConnection = require('composer-client').BusinessNetworkConnection;
+const BusinessNetworkConnection = require('composer-client').BusinessNetworkConnection;
 
 	async function beginer() 
 	{ 
