--- a/angular-app-wons/src/index.html
+++ b/angular-app-wons/src/index.html
@@ -20,6 +20,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type="text/javascript" src="https://rawgit.com/kOstovic/diplomskiHyperledger/master/angular-app-wons/src/bundleComposer.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
