ttime changed to seconds

--- a/angular-app-wons/src/index.html
+++ b/angular-app-wons/src/index.html
@@ -21,6 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script> 
+//config var for path in REST API
 var conn = "http://localhost:3000/";
 var api = "api/";
 var prefixApp = "org.szg";
@@ -36,7 +37,10 @@ var relationshipUniversityComponent = "resource:"+prefixApp+".UniversityComponen
 var postUniversityComponent = api+"UniversityComponent";
 var postMember = api+"Member";
 var postSystemAdministrator = api+"SystemAdministrator";
+const hour = 3600;
+const minute = 60;
 
+//async functions for GET and POST methods
 async function fetchAsync (url) {
 	let response = await fetch(url);
 	let data = await response.json();
@@ -55,6 +59,7 @@ async function postAsync (url,formData) {
 	return data;
 }
 
+//function for first time run creating users and assest
 	async function beginer() 
 	{ 
 		try {
@@ -73,15 +78,15 @@ async function postAsync (url,formData) {
 			assetFER.$class = 'org.szg.UniversityComponent';
 			assetFER.universityKey = "0036";
 			assetFER.universityName = "FER";
-			assetFER.opening = 500;
-			assetFER.closing = 2300;
+			assetFER.opening = 5*hour;
+			assetFER.closing = 23*hour;
 
-			//convert object to json string
+			//convert object to json string and send it to server
 			stringPost = JSON.stringify(assetFER);
 			resultPostArray = await postAsync(conn+postUniversityComponent,stringPost);
 			/*var assetFER = factory.newResource('org.szg', 'UniversityComponent', 'universityKey:0036');
-			assetFER.opening = 500;
-			assetFER.closing = 2300;
+			assetFER.opening = 5*hour;
+			assetFER.closing = 23*hour;
 			assetFER.universityName = "FER";
 			// Create a new relationship for the owner
 			let FERRelation = factory.newRelationship('org.szg', 'UniversityComponent', 'universityKey:0036');*/
@@ -89,30 +94,30 @@ async function postAsync (url,formData) {
 			assetFSB.$class = 'org.szg.UniversityComponent';
 			assetFSB.universityKey = "0035";
 			assetFSB.universityName = "FSB";
-			assetFSB.opening = 700;
-			assetFSB.closing = 2100;
+			assetFSB.opening = 7*hour;
+			assetFSB.closing = 21*hour;
 
-			//convert object to json string
+			//convert object to json string 
 			stringPost = JSON.stringify(assetFSB);
 			resultPostArray = await postAsync(conn+postUniversityComponent,stringPost);
 			/*var assetFSB = factory.newResource('org.szg', 'UniversityComponent', 'universityKey:0035');
-			assetFSB.opening = 700;
-			assetFSB.closing = 2100;
+			assetFSB.opening = 7*hour;
+			assetFSB.closing = 21*hour;
 			assetFSB.universityName = "FSB";
 			let FSBRelation = factory.newRelationship('org.szg', 'UniversityComponent', 'universityKey:0035');*/
 			var assetFFZG = new Object();
 			assetFFZG.$class = 'org.szg.UniversityComponent';
 			assetFFZG.universityKey = "1111";
 			assetFFZG.universityName = "FFZG";
-			assetFFZG.opening = 800;
-			assetFFZG.closing = 2000;
+			assetFFZG.opening = 8*hour;
+			assetFFZG.closing = 20*hour;
 
 			//convert object to json string
 			stringPost = JSON.stringify(assetFFZG);
 			resultPostArray = await postAsync(conn+postUniversityComponent,stringPost);
 			/*var assetFFZG = factory.newResource('org.szg', 'UniversityComponent', 'universityKey:1111');
-			assetFFZGopening = 800;
-			assetFFZG.closing = 2000;
+			assetFFZG.opening = 8*hour;
+			assetFFZG.closing = 20*hour;
 			assetFFZG.universityName = "FFZG";
 			let FFZGRelation = factory.newRelationship('org.szg', 'UniversityComponent', 'universityKey:1111');*/
 			
@@ -196,18 +201,22 @@ async function postAsync (url,formData) {
 		}
 	}	
 	
+	//function with logic for accepting or revoking access
 	async function checkTransaction(){
 
 		/*this.bizNetworkConnection = new BusinessNetworkConnection();
 		const cardName = "admin@pii-szg-network";
 		this.businessNetworkDefinition = await this.bizNetworkConnection.connect(cardName);*/
 		
+		//get input
 		var jmbag = document.getElementById('jmbag').value;
 		var universityKey = document.getElementById('universityKey').value;
 		
 		try {
 			//let registryMember = await this.bizNetworkConnection.getParticipantRegistry('org.szg.Member');
 			//let resultMember = registryMember.get('jmbag:'+jmbag);
+
+			//get member and asset from input
 			let resultMemberArray = await fetchAsync(conn+querySelectMember+jmbag);
 			let resultMember = resultMemberArray[0];
 			//let registryUniversityComponent = await this.bizNetworkConnection.getAssetRegistry('org.szg.UniversityComponent');
@@ -217,14 +226,20 @@ async function postAsync (url,formData) {
 
 			let methodCall;
 			let access = false;
+			//get current time
 			var d = new Date();
-			let ttime = d.getHours()*100+d.getMinutes();
+			let ttime = d.getHours()*hour+d.getMinutes()*minute;
 			
 			//logic for Access entry 
 			/*var me = await query('selectMember',{jmbagParam : resultMember.jmbag});
 			if(!me) {
         		throw new Error('Non existant user.');
 			}*/
+			//logic
+			//1. if person is accessing its own university and it is a student check time can he enter, 
+			//if he is staff or profesor he can enter without time checking 
+			//2. if person if profesor or student, it can enter on any university in opened times
+			//3. if person is entering fer, it can enter on any given time if it is opened
 			var strKey = resultMember.universityComponent;
 			var numUniversityComponentKey = strKey.replace(/[^0-9]/g, ''); 
 			if(numUniversityComponentKey == universityKey){
@@ -256,7 +271,8 @@ async function postAsync (url,formData) {
 				}
 				else access = true;
 			}
-
+			
+			//call function that will call transaction
 			if(access == true)
 				methodCall = "AuthorizeAccess"+resultUniversityComponent.universityName;
 			else 
@@ -269,6 +285,7 @@ async function postAsync (url,formData) {
 
 	}
 	
+	//function that is calling transasction from REST API
 	async function callTrasaction(_method, _jmbag, _universityKey){
 		try {
 
@@ -291,13 +308,12 @@ async function postAsync (url,formData) {
 			trans.universityComponent = relationshipUniversityComponent+_universityKey;
 			var stringTrans = JSON.stringify(trans);
 			resultPostArray = await postAsync(conn+api+_method,stringTrans);
-			//console.log(resultPostArray);
+			console.log(resultPostArray);
 		} catch (error) {
 			console.log(error);
 			throw error;
 		}
 	}
-
 
 </script>
 </head>
