working version with repaired logic

--- a/angular-app-wons/src/index.html
+++ b/angular-app-wons/src/index.html
@@ -20,8 +20,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script> 
-//config var for path in REST API
+  <script>//config var for path in REST API
 var conn = "http://localhost:3000/";
 var api = "api/";
 var prefixApp = "org.szg";
@@ -224,9 +223,24 @@ async function postAsync (url,formData) {
 			let resultUniversityComponentArray  = await fetchAsync(conn+querySelectUniversityComponent+universityKey);
 			let resultUniversityComponent = resultUniversityComponentArray[0];
 			let access = false;
+			let AuthLen, RevokeLen;
+
+			if(!resultMember.transactionAuthorized)
+				AuthLen = 0;
+			else AuthLen = resultMember.transactionAuthorized.length;
+			if(!resultMember.transactionRevoke)
+				RevokeLen = 0;
+			else RevokeLen = resultMember.transactionRevoke.length;
 
 			let	methodCall = "CheckAccess"+resultUniversityComponent.universityName;	
 			await callTrasaction(methodCall,resultMember.jmbag,resultUniversityComponent.universityKey);
+			let resultMemberArrayAfter = await fetchAsync(conn+querySelectMember+jmbag);
+			let resultMemberAfter = resultMemberArrayAfter[0];
+			var status = document.getElementById("status");
+			if (resultMemberAfter.transactionAuthorized.length > AuthLen)
+    			status.innerHTML = "Granted";
+			else	
+				status.innerHTML = "Denied";
 		} catch (error) {
 			console.log(error);
 			//throw error;	
@@ -264,8 +278,6 @@ async function postAsync (url,formData) {
 			throw error;
 		}
 	}
-
-
 </script>
 </head>
 <body>
